--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ include = ["src/ampel/py.typed"]
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "2.28.2"
+rpi-gpio = "0.7.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.12.0"
